compiler/testData/diagnostics/tests/sealed/NeverObject.kt
// RUN_PIPELINE_TILL: FRONTEND
<!WRONG_MODIFIER_TARGET!>sealed<!> object Sealed {

}

/* GENERATED_FIR_TAGS: objectDeclaration, sealed */
